2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 324272 - in search and
	  replace, parenthesis matching should be disabled'

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: worked on  bug 'Bug 376136 - Array
	  out of bounds selecting text'.

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/IMargin.cs,
	  Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: Optimized preview
	  window a bit.

2008-04-02  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/IMargin.cs,
	  Mono.TextEditor/CodeSegmentPreviewWindow.cs,
	  Mono.TextEditor/LineSegmentTree.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs, Makefile.am: Added
	  preview window for collapsed regions (feature request 363639).

2008-03-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Removed debug message.

2008-03-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSegmentTree.cs: fixed Bug 372273 - MD crash.

2008-03-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Fixed 'Bug 372256 - Region wrapped when
	  Code Folding is disabled'

2008-03-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Removed some debug messages.

2008-03-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed Bug 371702
	  - XmlEditor - crash with empty file.

2008-03-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, CSharpSyntaxMode.xml, CSyntaxMode.xml,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Rule.cs, Makefile.am: Fixed Bug 370303